@@ -324,7 +324,9 @@ this. Was used when mwEmbed was going to be an extension.
 * (bug 16877) Moving a page over a redirect no longer leaves an orphan entry in
   the recentchanges table
 * (bug 16009) Limit selection forms based on Pager now links to the correct page
-  when using long urls 
+  when using long urls
+* The display of the language list on the preferences is more comply with the 
+  BCP 47 standards.
 
 == API changes in 1.16 ==
 
